--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
-
-ばぐ2
