--- a/index.html
+++ b/index.html
@@ -2,13 +2,4 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
-</head>
-<body>
-    <h1>Hello World</h1>
-    <script src="index.js"></script>
-</body>
-</html>
-
-bug002
+    <meta name="viewport" content="width=device-width
